# Rescue-System

./: .gitignore
GUI/: index.html
LED-Matrix/: boot.py  code.py
da_ws/src/assessment_state_recorder/: package.xml  setup.cfg  setup.py
da_ws/src/assessment_state_recorder/assessment_state_recorder/: assessment_state_recorder.py
da_ws/src/backend/: package.xml  setup.py
da_ws/src/backend/backend/: app.py
esp32/: platformio.ini
esp32/src/: main.cpp
hardware_ws/src/linear_actuator/: package.xml  setup.cfg  setup.py
hardware_ws/src/linear_actuator/linear_actuator/: linear_actuator.py
hardware_ws/src/mqtt_bridge/: package.xml  setup.py
hardware_ws/src/mqtt_bridge/mqtt_bridge/: mqtt_bridge.py
scripts/: rescuebox_stack.sh
systemd/: assessment_state_recorder.service  linear_actuator.service  rescuebox_backend.service  rescuebox_stack.service  ros2-mqtt-bridge.service  rosbridge.service
