<?xml version="1.0"?>
<package format="3">
  <name>linear_actuator</name>
  <version>0.0.0</version>
  <description>Linear actuator ROS2 node</description>

  <maintainer email="rescue-pi@todo.todo">rescue-pi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

